# async-ratatui-template

./: .gitignore  ASYNC_BLOCKING_SEPARATION_FIX.md  Cargo.toml  FFT_REFACTOR_SUMMARY.md  LIST_HIGHLIGHTING_FIX.md  RUNNER_SYNC_FIXES.md  index.ts  ip-ranges.json  keyword.txt.new  package.json  rdl.ps1  res.json  rustfmt.toml  tsconfig.json
fft/: Cargo.toml
fft/src/: char_stream.rs  explorer.rs  explorer_content.rs  explorer_state.rs  input_state.rs  lib.rs  runner.rs  state.rs  widget.rs
helper/: Cargo.toml
helper/src/: internal_macros.rs  lib.rs
helper/src/events/: mod.rs  poll_event.rs
helper/src/events/render_event/: event.rs  mod.rs
helper/src/events/unhandled_event/: event.rs  mod.rs
src/: areas.rs  main.rs  ui.rs
src/app/: app.rs  app_.rs  app_data.rs  exports.rs  mod.rs  screen.rs  scroll_states.rs  state.rs
src/app/app/: impls.rs
src/app/app/impls/: checker.rs  reader.rs  writer.rs
src/app/app_/: impls.rs
src/app/app_/impls/: checker.rs  reader.rs  writer.rs
src/app/handler/: aws_ranges.rs  bucket_status.rs  mod.rs
src/app/handler/sectrails/: client.rs  jsons.rs  mod.rs  scp_impls.rs  sec_trail_puppeteer.rs
src/app/popup/: mod.rs
src/areas/: known_area.rs
src/args/: mod.rs
src/extras/: string_ext.rs
src/widgets/: alert.rs  confirmation.rs  input.rs  log.rs  logs.rs  mod.rs  statistic.rs  timestamp.rs
src/widgets/pulse/: mod.rs  pulse_fps.rs  pulse_level.rs  pulse_state.rs
