[package]
name = "s3-creator"
version = "0.1.0"
edition = "2024"
[workspace]
resolver = "3"
members = [
    ".", "fft", "helper",
]
[workspace.dependencies]
crossterm = { version = "0.29.0", features = ["events", "event-stream"] }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive", "rc"] }
strum = { version = "0.27.1", features = ["strum_macros", "derive"] }
pin-project = "1.1.10"
futures = { version = "0.3.31" }
tokio = { version = "1.45.1", features = ["full"] }
ratatui = { version = "0.29.0", features = ["crossterm", "all-widgets", "scrolling-regions"] }
devicons = "0.6.12"
chrono = "0.4.41"

[dependencies]
clap = { version = "4.5.40", features = ["derive", "usage"] }
reqwest = { version = "0.12.20", features = [
    "http2",
    "json",
    "h2",
    "default",
    "gzip",
    "zstd",
    "deflate",
    "brotli",
    "cookies",
    "rustls-tls",
    "trust-dns",
] }
tokio = { workspace = true }
addr = { version = "0.15.6", features = ["net", "serde", "publicsuffix"] }
trust-dns-resolver = { version = "0.23.2", features = ["tokio", "tokio-rustls"] }
serde_json = "1.0.140"
cidr = { version = "0.3.1", features = ["serde"] }
anyhow = "1.0.98"

crossterm = { workspace = true }
futures = { workspace = true }
ratatui = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
devicons = { workspace = true }
chrono = { workspace = true }
helper = { path = "helper" }
fft = { path = "fft" }
rand = "0.9.1"

