[package]
name = "helper"
version = "0.1.0"
edition = "2024"


[dependencies.chrono]
workspace = true

[dependencies.crossterm]
workspace = true

[dependencies.ratatui]
workspace = true

[dependencies.strum]
workspace = true

[dependencies.pin-project]
workspace = true

[dependencies.futures]
workspace = true
